--- a/documentation/R2.tex
+++ b/documentation/R2.tex
@@ -49,6 +49,10 @@ Aby uruchomić aplikację na serwerze, należy wykonać następujące kroki:
     \begin{verbatim}
     python3 -m venv .venv
     \end{verbatim}
+    \item Aktywuj wirtualne środowisko:
+    \begin{verbatim}
+    source .venv/bin/activate
+    \end{verbatim}
     \item Zainstaluj wymagane pakiety:
     \begin{verbatim}
     pip3 install -r requirements.txt
